<resources>
    <string name="app_name">tempmail</string>
    <string name="author_name">JKearnsl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="dev_by">
        Developed by JKearnsl
    </string>

    <string name="policy_description">
        The application uses the API of the 1secmail.com service.
        Using the app you agree to the Terms &amp; Conditions of 1secmail.com
    </string>

    <string name="policy_text"><![CDATA[

    <h3>Terms &amp; Conditions</h3>
    Please read these Terms of Service (&quot;Terms&quot;, &quot;Terms of Service&quot;) carefully before using our website (the &quot;Service&quot; or &quot;Website&quot;).

    Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.

    By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.

    Please be advised: you cannot use this Site for illegal activities.

    All incoming emails temporarily stored on our Service are permanently deleted after 1 hour. You can always delete your temporary email address at any time before automatic delete, by clicking button &quot;Delete&quot;.

    <h4>Links To Other Web Sites</h4>
    Our Service may contain links to third-party web sites or services that are not owned or controlled by us.

    Our website has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that we shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.

    We strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.

    <h4>Cookies and IP Addresses</h4>
    Website uses &quot;cookies&quot;, which are elements of data that a website can send to your browser, which may then be stored on your system. This element of data is a piece of text, not a program. The website can only access the information from a cookie sent by the website. We cannot access other cookies sent by other websites or the information contained therein. Additionally, we cannot learn your e-mail address or any other information about you through the use of a cookie. The only way we would learn such information is if you specifically and voluntarily submit that information to us.

    Service collects anonymous data that is not indicative of and cannot be traced to an individual without the cooperation of their Internet Service Provider. This data includes information about the user\'s remote IP address, referral data (which page &quot;linked&quot; to the present request) and the browser software\'s user-agent string. This information is accepted passively from the HTTP headers that are sent from the user when requesting any file from the server. Our Service log IP addresses for systems administration, troubleshooting purposes, users comments and to determine website usage.

    <h4>Governing Law</h4>
    Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service. These Terms shall be governed and construed in accordance with the laws of country chosen by Website owner, without regard to its conflict of law provisions.

    <h4>Privacy policy</h4>
    Service is committed to protecting your privacy. We will only use the information that we collect lawfully in accordance with the General Data Protection Regulation (GDPR).

    No personal data is collected. Like most standard Internet website servers, this Website use log files. This may include internet protocol (IP) addresses, browser type, internet service provider (ISP), referring/exit pages, platform type, date/time stamp, and number of clicks to analyze trends, administer the site, track user\'s movement in the aggregate, and gather broad demographic information for aggregate use. IP addresses, etc. are not linked to personally identifiable information.

    We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.

    <h4>Google AdSense Advertisement</h4>
    Some of the ads may be served by Google. Google’s use of the DART cookie enables it to serve ads to Users based on their visit to our Site and other sites on the Internet. DART uses &quot;non personally identifiable information&quot; and does NOT track personal information about you, such as your name, email address, physical address, etc. You may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at https://www.google.com/policies/technologies/ads/
    ]]>
</string>

    <string name="copyright">© 2024 JKearnsl. All rights reserved.</string>


</resources>