<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jkearnsl.tempmail.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jkearnsl.tempmail.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jkearnsl.tempmail.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/messageDetailFragment"
        android:name="com.jkearnsl.tempmail.ui.messages.MessageDetailFragment"
        android:label="Message Detail"
        tools:layout="@layout/fragment_message_detail" />
</navigation>